--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.63.4",
     "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.2.1",
     "react-native-localize": "^2.0.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
